force-app/main/default/objects/Employee_Department_Allocation__c/Employee_Department_Allocation__c.object-meta.xml
<CustomObject>
    <label>Employee Department Allocation</label>
    <nameField>
        <displayFormat>EMPDA - {0000}</displayFormat>
        <label>Employee Department Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Department Allocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>