force-app/main/default/objects/Employee_Department_Allocation__c/fields/Allocation_percentage__c.field-meta.xml
<CustomField>
    <fullName>Allocation_percentage__c</fullName>
    <label>Allocation percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>