force-app/main/default/objects/Employee_Department_Allocation__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Role</label>
    <referenceTo>Role__c</referenceTo>
    <relationshipLabel>Employee Department Allocations</relationshipLabel>
    <relationshipName>Employee_Department_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>