force-app/main/default/objects/Employee_Department_Allocation__c/fields/Wage_Category__c.field-meta.xml
<CustomField>
    <fullName>Wage_Category__c</fullName>
    <label>Wage Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>R&amp;D</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>